<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Hijos"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="452dp"
        android:gravity="start"
        android:text="@string/hijos"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/estadocivil"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="372dp"
        android:gravity="start"
        android:text="@string/estadoCivil"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sexo"
        android:layout_width="127dp"
        android:layout_height="70dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="276dp"
        android:gravity="start"
        android:text="@string/genero"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="137dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="184dp"
        android:gravity="start"
        android:text="@string/edad"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextapellidos"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="88dp"
        android:ems="10"

        android:hint="@string/apellidosDefault"
        android:inputType="textCapWords"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextNombre"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nombreDefault"
        android:inputType="textCapWords"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="106dp"
        android:layout_height="78dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="264dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/Hombre"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:text="@string/hombre"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/Mujer"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:checked="true"
            android:text="@string/mujer"
            android:textSize="17sp" />

    </RadioGroup>

    <Spinner
        android:id="@+id/desplegable"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="376dp"
        android:entries="@array/estadocivilarray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="456dp"
        android:checked="false"
        android:textOff="@string/no"
        android:textOn="@string/si"
        app:layout_constraintStart_toEndOf="@+id/Hijos"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="512dp"
        android:background="@color/colorPrimary"
        android:text="@string/listo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etiqueta"
        android:layout_width="172dp"
        android:layout_height="78dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="520dp"
        android:textColor="@color/rojo"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="512dp"
        android:background="@color/colorPrimary"
        android:text="@string/borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIdiomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="72dp"
        android:text="@string/buttonIdiomas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>